[package]
name = "lambda-router-macros"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Macros for use within lambda-router crate"
homepage = "https://github.com/evictionapp/lambda-router"
repository = "https://github.com/evictionapp/lambda-router"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
lazy-regex = "3.1.0"
proc-macro2 = "1.0.81"
quote = "1.0.36"
syn = { version = "2.0.60", features = ["extra-traits", "full"] }
