[package]
name = "lambda-router"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "lambda-router is a simple library to help with routing http-api-gateway requests to handlers in the same lambda that receive and return json."
homepage = "https://github.com/evictionapp/lambda-router"
repository = "https://github.com/evictionapp/lambda-router"
readme = "../README.md"

[dependencies]
lambda-router-macros = { version = "0.1.1", path = "../lambda-router-macros" }
lambda_http = "0.11.1"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
serde_urlencoded = "0.7.1"
serde_with = "3.8.1"
thiserror = "1.0.59"
